# Workshop-C-

./: CMakeLists.txt  README.md
src/: 0-base.cpp  00-base.cpp  01-ne-garder-que-le-vert.cpp  02-echanger-les-cannaux.cpp  03-noir-et-blanc.cpp  04-negatif.cpp  05-degrade.cpp  06-miroir.cpp  07-image-bruitee.cpp  08-rotation-de-90.cpp  09-rgb-split.cpp  10-1-luminosite-claire.cpp  10-2-luminosite-sombre.cpp  11-disque.cpp  12-cercle.cpp  13-animation.cpp  14-rosace.cpp  15-mosaique.cpp  16-mosaique-miroir.cpp  17-glitch.cpp  18-tri-de-pixels.cpp  19-degrade-couleur-oklbab.cpp  19-degrade-couleur-srgb.cpp  20-fractale-de-mandelbrot.cpp  21-normalisation-histogramme.cpp  21-trammage.cpp  22-normalisation-historigramme.cpp  22-vortex.cpp  23-vortex.cpp  24-1-convolutions-box-blur.cpp  24-2-convolutions-emboss.cpp  24-3-convolutions-outline.cpp  24-4-convolutions-sharpen.cpp  24-5-filtres-separables-box-blur.cpp  25-filtre-kuwahara.cpp  25-k-means.cpp  28-fullnoise.cpp  30-poor-lightroom.cpp  31-color-grading.cpp  900-fullnoise.cpp  (+1 more)
